# music-player

./: .gitignore  Cargo.toml  README.md  commands.txt  crash-report.txt
src/: crash_reporter.rs  handle_input.rs  main.rs  playlist_settings.rs  utils.rs
