[package]
name = "music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
rdev = "0.5.3"
rodio = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
